--- a/src/main/resources/db/changelog/changelog-1.yml
+++ b/src/main/resources/db/changelog/changelog-1.yml
@@ -37,3 +37,70 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                   defaultValueComputed: now()
+  - changeSet:
+      id: 02-01
+      author: arseniy
+      changes:
+        - createTable:
+            tableName: cards
+            columns:
+              - column:
+                  name: id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+                    primaryKey: true
+                    primaryKeyName: cards_pk
+              - column:
+                  name: title
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: summary
+                  type: VARCHAR(1000)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: author_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: up_vote
+                  type: INTEGER
+                  constraints:
+                    nullable: false
+              - column:
+                  name: down_vote
+                  type: INTEGER
+                  constraints:
+                    nullable: false
+              - column:
+                  name: project_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP WITH TIME ZONE
+                  constraints:
+                    nullable: false
+                  defaultValueComputed: now()
+              - column:
+                  name: updated_at
+                  type: TIMESTAMP WITH TIME ZONE
+                  constraints:
+                    nullable: false
+                  defaultValueComputed: now()
+  - changeSet:
+      id: 03-01
+      author: arseniy
+      changes:
+        - addForeignKeyConstraint:
+            baseTableName: cards
+            baseColumnNames: project_id
+            constraintName: fk_card_project
+            onDelete: NO ACTION
+            referencedColumnNames: id
+            referencedTableName: projects
