added config swagger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port:
     8080
+  forward-headers-strategy: framework
 
 spring:
   datasource:
@@ -15,3 +16,11 @@ spring:
 
   liquibase:
     enabled: true
+
+
+springdoc:
+  api-docs:
+    path: /docs
+  swagger-ui:
+    path: /docs
+  paths-to-match: /api/**
