TP-66 added jwt auth

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,7 @@ springdoc:
   swagger-ui:
     path: /docs
   paths-to-match: /api/**
+
+app:
+  jwtSecret:
+    asdasdasd123123supersecretkey123123123asdasdasd
