TP-81 added project settings

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,10 @@ app:
       asdasdasd123123supersecretkey123123123asdasdasd
     expire-time:
       86400
+  invite-link:
+    expire-time-minutes:
+      10
+
+schedule:
+  project-settings-scheduler:
+    '0 0 0 * * *'
